kubernetes/apps/observability/prometheus-adapter/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-adapter-egress-internal
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: prometheus-adapter
    egress:
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: prometheus
        toPorts:
          - ports:
              - port: "9090"
